--- a/src/components/AboutStyles.css
+++ b/src/components/AboutStyles.css
@@ -63,8 +63,29 @@
         width: 100%;
     }
     .image img{
-        width: 25%;
+        width: 30%;
     }
 
 }
+
+@media  screen and (max-width: 500px){
+    .About{
+        padding: 10px 0px 10px 0px;
+    }
+    .About-details{
+        margin-left: 30px;
+        margin-bottom: 10px;
+        
+    }
+    .About h1{
+        font-size: 40px;
+    }
+    .image img{
+        width: 35%;
+        margin-left: -25px;
+    }
+
+}
+    
+
 
